--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="col">
             <div class="image3" id="image_3"><img id="image3" src="./assets/image3.jpg" alt="img3" />
                 <img class="image4" src="./assets/image4.jpg" alt="img4" /></div> 
-           <div class="image2"></div><img id="image2" src="./assets/image2.png" alt="img2" /></div>
+           <div class="image2"></div><img id="image2" src="./assets/image2.jpg" alt="img2" /></div>
            <div class="col2">
             <h3>lorem ipsum</h3>
             <br>
